syntax = "proto2";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "tagger.proto";

message ObjectID {
	required string id = 1;
}

message User {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string username = 2 [(tagger.tags) = "bson:\"username,omitempty\""];
	optional string email = 3 [(tagger.tags) = "bson:\"email,omitempty\""];
	optional google.protobuf.Timestamp register_time = 4 [(tagger.tags) = "bson:\"register_time,omitempty\""];
	optional UserAuth auth = 5 [(tagger.tags) = "bson:\"auth,omitempty\""];

}
message UserAuth {
	optional int64 method = 1 [(tagger.tags) = "bson:\"method,omitempty\""];
	optional bytes password = 2 [(tagger.tags) = "bson:\"password,omitempty\""];
}

message Submission {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string type = 2 [(tagger.tags) = "bson:\"type,omitempty\""];
	optional ObjectID user = 3 [(tagger.tags) = "bson:\"user,omitempty\""];
	repeated ObjectID owner = 4 [(tagger.tags) = "bson:\"owner,omitempty\""];
	optional ObjectID problem = 5 [(tagger.tags) = "bson:\"problem,omitempty\""];
	optional google.protobuf.Timestamp submit_time = 6 [(tagger.tags) = "bson:\"submit_time,omitempty\""];
	optional SubmissionContent content = 7 [(tagger.tags) = "bson:\"content,omitempty\""];
	optional SubmissionResult result = 8 [(tagger.tags) = "bson:\"result,omitempty\""];
	optional JudgeQueueStatus judge_queue_status = 9 [(tagger.tags) = "bson:\"judge_queue_status,omitempty\""];
	optional bool public = 10 [(tagger.tags) = "bson:\"public,omitempty\""];
}

message SubmissionContent {
	optional string language = 1 [(tagger.tags) = "bson:\"language,omitempty\""];
	optional string code = 2 [(tagger.tags) = "bson:\"code,omitempty\""];
}

message SubmissionResult {
	optional string status = 1 [(tagger.tags) = "bson:\"status,omitempty\""];
	optional double score = 2 [(tagger.tags) = "bson:\"score,omitempty\""];
	optional int64 memory_usage = 3 [(tagger.tags) = "bson:\"memory_usage,omitempty\""];
	optional google.protobuf.Duration time_usage = 4 [(tagger.tags) = "bson:\"time_usage,omitempty\""];
}

message JudgeQueueStatus {
	optional bool in_queue = 1 [(tagger.tags) = "bson:\"in_queue,omitempty\""];
}

message Session {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string session_token = 2 [(tagger.tags) = "bson:\"session_token,omitempty\""];
	optional ObjectID session_user = 3 [(tagger.tags) = "bson:\"session_user,omitempty\""];
}

message Problem {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string title = 2 [(tagger.tags) = "bson:\"title,omitempty\""];
	optional string statement = 3 [(tagger.tags) = "bson:\"statement,omitempty\""];
	repeated ObjectID owner = 4 [(tagger.tags) = "bson:\"owner,omitempty\""];
	optional google.protobuf.Timestamp create_time = 5 [(tagger.tags) = "bson:\"create_time,omitempty\""];
	optional string short_name = 6 [(tagger.tags) = "bson:\"short_name,omitempty\""];
	optional bool public = 7 [(tagger.tags) = "bson:\"public,omitempty\""];
	optional ProblemStats public_stats = 8 [(tagger.tags) = "bson:\"public_stats,omitempty\""];
}
message ProblemStats {
	optional int64 accept = 1 [(tagger.tags) = "bson:\"accept,omitempty\""];
	optional int64 submission = 2 [(tagger.tags) = "bson:\"submission,omitempty\""];
}

message Contest {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string name = 2 [(tagger.tags) = "bson:\"name,omitempty\""];
	optional string description = 3 [(tagger.tags) = "bson:\"description,omitempty\""];
	optional ObjectID owner = 4 [(tagger.tags) = "bson:\"owner,omitempty\""];
	optional ContestState state = 5 [(tagger.tags) = "bson:\"state,omitempty\""];
}

message ContestState {
	optional bool running = 1 [(tagger.tags) = "bson:\"running,omitempty\""];
	optional google.protobuf.Timestamp start_time = 2 [(tagger.tags) = "bson:\"start_time,omitempty\""];
	repeated ProblemEntry problems = 3 [(tagger.tags) = "bson:\"problems,omitempty\""];
	repeated ContestSchedule schedule = 4 [(tagger.tags) = "bson:\"schedule,omitempty\""];
	optional string ranklist_type = 5 [(tagger.tags) = "bson:\"ranklist_type,omitempty\""];
	optional string ranklist_comp = 6 [(tagger.tags) = "bson:\"ranklist_comp,omitempty\""];
	optional string ranklist_visibility = 7 [(tagger.tags) = "bson:\"ranklist_visibility,omitempty\""];
	optional bool judge_in_contest = 8 [(tagger.tags) = "bson:\"judge_in_contest,omitempty\""];
	optional int32 submission_per_problem = 9 [(tagger.tags) = "bson:\"submission_per_problem,omitempty\""];
	repeated ContestClarification clarifications = 10 [(tagger.tags) = "bson:\"clarifications,omitempty\""];
}

message ProblemEntry {
	optional string name = 1 [(tagger.tags) = "bson:\"name,omitempty\""];
	optional ObjectID problem_id = 2 [(tagger.tags) = "bson:\"problem_id,omitempty\""];
}

message ContestSchedule {
	optional string type = 1 [(tagger.tags) = "bson:\"type,omitempty\""];
	optional bool done = 2 [(tagger.tags) = "bson:\"done,omitempty\""];
	optional google.protobuf.Timestamp start_time = 3 [(tagger.tags) = "bson:\"start_time,omitempty\""];
}

message ContestClarification {
	optional google.protobuf.Timestamp create_time = 1 [(tagger.tags) = "bson:\"create_time,omitempty\""];
	optional string title = 2 [(tagger.tags) = "bson:\"title,omitempty\""];
	optional string problem_name = 3 [(tagger.tags) = "bson:\"problem_name,omitempty\""];
	optional string content = 4 [(tagger.tags) = "bson:\"content,omitempty\""];
}

message ContestPlayer {
	optional ObjectID id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional ObjectID contest = 2 [(tagger.tags) = "bson:\"contest,omitempty\""];
	optional ObjectID user = 3 [(tagger.tags) = "bson:\"user,omitempty\""];
	optional google.protobuf.Timestamp register_time = 4 [(tagger.tags) = "bson:\"register_time,omitempty\""];
	map<string, ContestPlayerProblemEntry> problems = 5 [(tagger.tags) = "bson:\"problems,omitempty\""];
}

message ContestPlayerProblemEntry {
	repeated ContestPlayerProblemSubmissionEntry submissions = 1 [(tagger.tags) = "bson:\"submissions,omitempty\""];
}

message ContestPlayerProblemSubmissionEntry {
	optional ObjectID submission_id = 1 [(tagger.tags) = "bson:\"submission_id,omitempty\""];
	optional google.protobuf.Duration penalty_time = 2 [(tagger.tags) = "bson:\"penalty_time,omitempty\""];
	optional google.protobuf.Timestamp submit_time = 3 [(tagger.tags) = "bson:\"submit_time,omitempty\""];
}

message Article {
	optional ObjectID id = 1  [(tagger.tags) = "bson:\"_id,omitempty\""];
	optional string title = 2 [(tagger.tags) = "bson:\"title,omitempty\""];
	optional ObjectID owner = 3 [(tagger.tags) = "bson:\"owner,omitempty\""];
	optional string text = 4 [(tagger.tags) = "bson:\"text,omitempty\""];
	repeated Reply reply = 5 [(tagger.tags) = "bson:\"reply,omitempty\""];
	optional google.protobuf.Timestamp create_time = 6 [(tagger.tags) = "bson:\"create_time,omitempty\""];
	optional google.protobuf.Timestamp last_edit_time = 7 [(tagger.tags) = "bson:\"last_edit_time,omitempty\""];
}

message Reply {
	optional ObjectID owner = 1 [(tagger.tags) = "bson:\"owner,omitempty\""];
	optional google.protobuf.Timestamp create_time = 2 [(tagger.tags) = "bson:\"create_time,omitempty\""];
	optional google.protobuf.Timestamp last_edit_time = 3 [(tagger.tags) = "bson:\"last_edit_time,omitempty\""];
	optional string text = 4 [(tagger.tags) = "bson:\"text,omitempty\""];
}


// API part
message Response {
	optional ResponseSession session = 1;
	optional string error = 2;
	optional google.protobuf.Any data = 3;
}

message ResponseSession {
	optional string user_name = 1 [(tagger.tags) = "bson:\"user_name\""];
	optional bool logged_in = 2 [(tagger.tags) = "bson:\"logged_in\""];
}

message LoginRequest {
	optional string username = 1;
	optional string password = 2;
}

message RegisterRequest {
	optional string username = 1;
	optional string password = 2;
	optional string email = 3;
}
